envs/2.K8_env/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8-sample-app-svc
  namespace: k8samp
spec:
  selector:
    app: k8-sample-app
  type: NodePort

  ports:
    - name        : service-1-pt
      protocol    : TCP
      port        : 80
      targetPort  : 9005
      nodePort    : 31080

    - name        : service-2-pt
      protocol    : TCP
      port        : 85
      targetPort  : 9006
      nodePort    : 31443
