envs/2.K8_env/service_1.yml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: k8samp
spec:
  selector:
    app: k8-sample-app
  type: NodePort

  ports:
    - name        : service-1-pt
      protocol    : TCP
      port        : 80
      targetPort  : 9005
      nodePort    : 31080
