envs/2.K8_env/service_2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2
  namespace: k8samp
spec:
  selector:
    app: k8-sample-app
  type: NodePort

  ports:
    - name        : service-2-pt
      protocol    : TCP
      port        : 85
      targetPort  : 9006
      nodePort    : 31443
