envs/2.K8_env/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    spec.ingressClassName: "nginx"
  name: fan-out-ingress
  namespace: k8samp

spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /service_1
        backend:
          service:
            name: service-1
            port:
              number: 80
        pathType: ImplementationSpecific
